--- a/.github/workflows/yatr.yaml
+++ b/.github/workflows/yatr.yaml
@@ -11,6 +11,8 @@ jobs:
         target:
           - distcheck
           - dist-linux-amd64
+          - dist-linux-armv6
+          - dist-linux-armv7
 
     steps:
       - name: Set up Go
