Revert "build: disable arm builds for now"
This reverts commit 740ffa7acab7790b2bf60c80ea64b53c18613fb5.

--- a/.yatr.yml
+++ b/.yatr.yml
@@ -6,3 +6,11 @@ targets:
         task_args:
             - -ldflags
             - "-X github.com/dwtk/dwtk/internal/version.Version={{.Version}}"
+    dist-linux-armv6:
+        task_args:
+            - -ldflags
+            - "-X github.com/dwtk/dwtk/internal/version.Version={{.Version}}"
+    dist-linux-armv7:
+        task_args:
+            - -ldflags
+            - "-X github.com/dwtk/dwtk/internal/version.Version={{.Version}}"
